added get single post

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <div class="row" id="container">
             <div class="buttons my-4 text-center">
                 <button class="btn btn-outline-danger m-2 w-25" id="getText">Get Text</button>
-                <button class="btn btn-outline-warning m-2 w-25" id="getJson">Get Users</button>
-                <button class="btn btn-outline-success m-2 w-25" id="getPost">Get Posts</button>
+                <button class="btn btn-outline-warning m-2 w-25" id="getUsers">Get Users</button>
+                <button class="btn btn-outline-success m-2 w-25" id="getPosts">Get Posts</button>
+                <button class="btn btn-outline-primary m-2 w-25" id="getPost">Get Single Post</button>
             </div>
             <form class="m-auto form" id="form">
                 <div class="mb-3">
