delete request added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <div class="container">
         <div class="row" id="container">
             <div class="buttons my-4 text-center">
-                <button class="btn btn-outline-danger m-2 w-25" id="getText">Get Text</button>
+                <button class="btn btn-outline-secondary m-2 w-25" id="getText">Get Text</button>
                 <button class="btn btn-outline-warning m-2 w-25" id="getUsers">Get Users</button>
                 <button class="btn btn-outline-success m-2 w-25" id="getPosts">Get Posts</button>
                 <button class="btn btn-outline-primary m-2 w-25" id="getPost">Get Single Post</button>
+                <button class="btn btn-outline-danger m-2 w-25" id="deletePost">Delete Single Post</button>
             </div>
             <form class="m-auto form" id="form">
                 <div class="mb-3">
